removed temp fix for downarrow on mobile view

--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -65,9 +65,6 @@ body {
   height: 2rem;
   background: url(../img/arrow_down.svg) no-repeat;
   bottom: 3%;
-  @include respond-to($phone) {
-    bottom: calc(3% + 50px);
-  }
   position: absolute;
   opacity: 0;
   pointer-events: all;
